samples/_failures_safe/1761459838_59ebf0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_868a0a0b.c: In function ‘main’:
./samples/SAFE/__tmp_868a0a0b.c:151:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |     Buffer decompressed
      |     ^~~~~~
./samples/SAFE/__tmp_868a0a0b.c:151:5: error: expected declaration or statement at end of input
